fixed last card being cut off bug, project title parse html, shuffle cards

--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -26,6 +26,10 @@
   transition: all 0.6s cubic-bezier(0.215, 0.61, 0.355, 1) !important;
 }
 
+.lastProjectCard {
+  margin-right: 85px;
+}
+
 @media all and (min-width: 450px) {
   .projectCard:hover {
     transform: translateY(-40px);
